Add method for updating LyricSentence's
